--- a/pages/login.html
+++ b/pages/login.html
@@ -21,12 +21,12 @@
   </header>
   <div id="auth-container">
     <div class="auth-form-wrapper">
-        <h2 class="auth-title">Login</h2>
+        <h2 class="auth-title">🔐 Login</h2>
         <div id="error-message" class="error-message" style="display: none;"></div>
         <form id="login-form">
-            <input type="email" id="login-email" placeholder="Email" required autocomplete="username">
-            <input type="password" id="login-password" placeholder="Password" required autocomplete="current-password">
-            <button type="submit">Login</button>
+            <input type="email" id="login-email" placeholder="📧 Email" required autocomplete="username">
+            <input type="password" id="login-password" placeholder="🔒 Password" required autocomplete="current-password">
+            <button type="submit">🔐 Login</button>
         </form>
         <p class="auth-switch">Don't have an account? <a href="register.html" id="show-register">Register</a></p>
     </div>
