--- a/pages/register.html
+++ b/pages/register.html
@@ -21,13 +21,13 @@
   </header>
   <div id="auth-container">
     <div class="auth-form-wrapper">
-        <h2 class="auth-title">Register</h2>
+        <h2 class="auth-title">👤 Register</h2>
         <div id="error-message" class="error-message" style="display: none;"></div>
         <form id="register-form">
-            <input type="email" id="register-email" placeholder="Email" required autocomplete="username">
-            <input type="password" id="register-password" placeholder="Password" required autocomplete="new-password">
-            <input type="password" id="register-confirm-password" placeholder="Confirm Password" required autocomplete="new-password">
-            <button type="submit">Register</button>
+            <input type="email" id="register-email" placeholder="📧 Email" required autocomplete="username">
+            <input type="password" id="register-password" placeholder="🔒 Password" required autocomplete="new-password">
+            <input type="password" id="register-confirm-password" placeholder="🔒 Confirm Password" required autocomplete="new-password">
+            <button type="submit">👤 Register</button>
         </form>
         <p class="auth-switch">Already have an account? <a href="login.html" id="show-login">Login</a></p>
     </div>
