--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="config/firebase-config.js"></script>
+  <script src="assets/js/error-handler.js"></script>
+  <script src="assets/js/auth-manager.js"></script>
   <script src="assets/js/theme-toggle.js"></script>
   <script src="assets/js/script.js"></script>
   <script>
