Added Login with Google

--- a/pages/login.html
+++ b/pages/login.html
@@ -28,6 +28,11 @@
             <input type="password" id="login-password" placeholder="🔒 Password" required autocomplete="current-password">
             <button type="submit">🔐 Login</button>
         </form>
+    <div class="google-login-wrapper">
+      <button id="google-login-btn" type="button" class="google-login-btn">
+        <img src="../assets/images/logo.png" alt="Google Logo" style="width: 20px; vertical-align: middle; margin-right: 8px;">Login with Google
+      </button>
+    </div>
         <p class="auth-switch">Don't have an account? <a href="register.html" id="show-register">Register</a></p>
     </div>
   </div>
