Login with google button change

--- a/pages/login.html
+++ b/pages/login.html
@@ -28,9 +28,10 @@
             <input type="password" id="login-password" placeholder="🔒 Password" required autocomplete="current-password">
             <button type="submit">🔐 Login</button>
         </form>
-    <div class="google-login-wrapper">
+    <!-- Google Login Tile -->
+    <div class="google-login-tile">
       <button id="google-login-btn" type="button" class="google-login-btn">
-        <img src="../assets/images/logo.png" alt="Google Logo" style="width: 20px; vertical-align: middle; margin-right: 8px;">Login with Google
+        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google Logo" style="width: 22px; height: 22px; vertical-align: middle; margin-right: 10px;">Login with Google
       </button>
     </div>
         <p class="auth-switch">Don't have an account? <a href="register.html" id="show-register">Register</a></p>
